--- a/assets/principal/container-titulo.css
+++ b/assets/principal/container-titulo.css
@@ -1,6 +1,4 @@
-.cabecalho_principal__titulo{
-    width: 588px;
-    height: 102px;
+.container__titulo{
     font-size: 28px;
     font-weight: 700;
     color: var(--branco);
