--- a/assets/principal/principal.css
+++ b/assets/principal/principal.css
@@ -1,9 +1,7 @@
-.cabecalho_principal{
+.principal{
     background-image: url("/assets/imagens/Background.svg");
     background-repeat: no-repeat;
     background-size: contain;
-    height: 100vh;
-    display: grid;
-    grid-template-columns: 50% 50%;
+    align-items: center;
     text-align: center;
 }
