--- a/assets/secundario/secundario-titulo.css
+++ b/assets/secundario/secundario-titulo.css
@@ -1,6 +1,6 @@
-.plataforma_descricao__titulo {
+.descricao__titulo {
     font-weight: 700;
     font-size: 48px;
     color: var(--branco);
-    margin-bottom: 8px;
+    margin-bottom: 0.1em;
 }
